alteração no arquivo layout do projeto.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <label>Preço</label>
                                 <input type="number" class="form-control" placeholder="Digite o preço" required v-model="tempPreco">
                             </div>
-                            <button v-on:click="editProduto" type="button" class="btn btn-primary">Enviar</button>
+                            <button v-on:click="editProduto(index)" type="button" class="btn btn-primary">Enviar</button>
                         </form>
                     </div>
                 </div>
